--- a/src/app/i18n/locales/en/footer.json
+++ b/src/app/i18n/locales/en/footer.json
@@ -2,5 +2,6 @@
   "phone_number": "Phone number",
   "terms_of_service": "Terms of service",
   "payment_info": "Payment info",
-  "requisites": "Requisites"
+  "requisites": "Requisites",
+  "address": "Address: Kazakhstan, Almaty, Almaly district, st. Karasai Batyr, 180, apt. 76, 050008"
 }
