--- a/src/app/i18n/locales/ru/footer.json
+++ b/src/app/i18n/locales/ru/footer.json
@@ -2,5 +2,6 @@
   "phone_number": "Телефон",
   "terms_of_service": "Пользовательское соглашение",
   "payment_info": "Оплата",
-  "requisites": "Реквизиты"
+  "requisites": "Реквизиты",
+  "address": "Адрес: Казахстан, г. Алматы, Алмалинский район, ул. Карасай батыра, д. 180, кв. 76, 050008"
 }
