--- a/src/app/i18n/locales/zh/footer.json
+++ b/src/app/i18n/locales/zh/footer.json
@@ -2,5 +2,6 @@
   "phone_number": "电话号码",
   "terms_of_service": "使用条款",
   "payment_info": "支付",
-  "requisites": "银行账户"
+  "requisites": "银行账户",
+  "address": "地址：哈萨克斯坦，阿拉木图，阿拉木图区，圣。 Karasai Batyr，180，公寓。 76, 050008"
 }
