--- a/src/app/i18n/locales/en/delivery.json
+++ b/src/app/i18n/locales/en/delivery.json
@@ -13,5 +13,6 @@
   "in_your_country": "In your country",
   "in_mail_office": "In mail office",
   "delivered": "Delivered",
+  "deleted": "Deleted",
   "track_delivery": "Track delivery"
 }
