--- a/src/app/i18n/locales/en/footer.json
+++ b/src/app/i18n/locales/en/footer.json
@@ -3,5 +3,5 @@
   "terms_of_service": "Terms of service",
   "payment_info": "Payment info",
   "requisites": "Requisites",
-  "address": "Address: Kazakhstan, Almaty, Almaly district, st. Karasai Batyr, 180, apt. 76, 050008"
+  "address": "Address: Kazakhstan, Almaty, Turksib district, Goethe st., 263, 050054"
 }
