--- a/src/app/i18n/locales/ru/delivery.json
+++ b/src/app/i18n/locales/ru/delivery.json
@@ -13,5 +13,6 @@
   "in_your_country": "В вашей стране",
   "in_mail_office": "В почтовом отделении",
   "delivered": "Доставлен",
+  "deleted": "Удален",
   "track_delivery": "Отследить доставку"
 }
