--- a/src/app/i18n/locales/ru/footer.json
+++ b/src/app/i18n/locales/ru/footer.json
@@ -3,5 +3,5 @@
   "terms_of_service": "Пользовательское соглашение",
   "payment_info": "Оплата",
   "requisites": "Реквизиты",
-  "address": "Адрес: Казахстан, г. Алматы, Алмалинский район, ул. Карасай батыра, д. 180, кв. 76, 050008"
+  "address": "Адрес: Казахстан, Алматы, Турксибский район, ул. Гете, 263, 050054"
 }
