--- a/src/app/i18n/locales/zh/about_us.json
+++ b/src/app/i18n/locales/zh/about_us.json
@@ -1,5 +1,5 @@
 {
   "title": "关于我们",
-  "description": "QP Express 是一家运输和物流公司，专门从事从土耳其到哈萨克斯坦的包裹递送。\n土耳其的许多网上商店不提供直接送货到哈萨克斯坦的服务。 我们解决这个问题并管理交付的每个阶段，从收到您的包裹到将其交付给您。",
-  "mission": "我们为您服务，让您可以享受自由选择和多样化的产品。"
+  "description": "QP Express 是一家專門向哈薩克斯坦運送包裹的運輸和物流公司。\n許多國外網路商店不提供直接送貨到哈薩克的服務。 我們解決這個問題並管理交付的每個階段，從收到您的包裹到將其交付給您。",
+  "mission": "我們為您服務，讓您可以享受自由選擇和多樣化的產品。"
 }
