--- a/src/app/i18n/locales/zh/delivery.json
+++ b/src/app/i18n/locales/zh/delivery.json
@@ -13,5 +13,6 @@
   "in_your_country": "在您的国家",
   "in_mail_office": "在邮局",
   "delivered": "已交付",
+  "deleted": "已删除",
   "track_delivery": "跟踪交付"
 }
