--- a/src/app/i18n/locales/zh/footer.json
+++ b/src/app/i18n/locales/zh/footer.json
@@ -3,5 +3,5 @@
   "terms_of_service": "使用条款",
   "payment_info": "支付",
   "requisites": "银行账户",
-  "address": "地址：哈萨克斯坦，阿拉木图，阿拉木图区，圣。 Karasai Batyr，180，公寓。 76, 050008"
+  "address": "地址：哈萨克斯坦，阿拉木图，Turksib区，圣。 歌德, 263, 050054"
 }
