--- a/src/app/i18n/locales/zh/how_it_works.json
+++ b/src/app/i18n/locales/zh/how_it_works.json
@@ -1,6 +1,6 @@
 {
   "title": "怎么运行的？",
-  "first_step": "在网站上注册并获得土耳其的免费地址",
-  "second_step": "在土耳其市场上向所发布的地址下订单。\n\n在我们的仓库收到包裹后，您支付运费",
-  "third_step": "我们将在 7 天内递送您的包裹"
+  "first_step": "註冊並接收國外地址",
+  "second_step": "在國外市場上向所發布的地址下訂單。\n\n在我们的仓库收到包裹后，您支付运费",
+  "third_step": "我們會在 7-10 天內送達您的包裹"
 }
