--- a/src/app/i18n/locales/ru/how_it_works.json
+++ b/src/app/i18n/locales/ru/how_it_works.json
@@ -1,6 +1,6 @@
 {
   "title": "Как это работает?",
-  "first_step": "Проходите регистрацию на сайте и получаете бесплатный адрес в Турции",
-  "second_step": "Делаете заказ на турецком маркетплейсе на выданный адрес.\n\nПосле получения посылки на нашем складе, оплачиваете доставку",
-  "third_step": "Мы доставляем вашу посылку в течение 7 дней"
+  "first_step": "Проходите регистрацию и получаете иностранный адрес",
+  "second_step": "Делаете заказ на иностранном маркетплейсе на выданный адрес.\n\nПосле получения посылки на нашем складе, оплачиваете доставку",
+  "third_step": "Мы доставляем вашу посылку в течение 7-10 дней"
 }
