refactor: copy address data by click

--- a/src/app/i18n/locales/en/profile.json
+++ b/src/app/i18n/locales/en/profile.json
@@ -4,6 +4,7 @@
   "orders": "My orders",
   "create_order": "+ Add order",
   "deliveries": "My deliveries",
+  "copied": "Copied",
   "edit_profile": {
     "my_personal_info": "My personal information",
     "personal_info": "Personal information",
