--- a/src/app/i18n/locales/kz/profile.json
+++ b/src/app/i18n/locales/kz/profile.json
@@ -4,6 +4,7 @@
   "orders": "Менің тапсырыстарым",
   "create_order": "+ Тапсырыс қосыңыз",
   "deliveries": "Менің сәлемдемелерім",
+  "copied": "Көшірілді",
   "edit_profile": {
     "my_personal_info": "Менің жеке ақпаратым",
     "personal_info": "Жеке ақпарат",
