--- a/src/app/i18n/locales/ru/profile.json
+++ b/src/app/i18n/locales/ru/profile.json
@@ -4,6 +4,7 @@
   "orders": "Мои заказы",
   "create_order": "+ Добавить заказ",
   "deliveries": "Мои посылки",
+  "copied": "Скопировано",
   "edit_profile": {
     "my_personal_info": "Моя личная информация",
     "personal_info": "Личная информация",
