--- a/src/app/i18n/locales/zh/profile.json
+++ b/src/app/i18n/locales/zh/profile.json
@@ -4,6 +4,7 @@
   "orders": "我的订单",
   "create_order": "+ 添加订单",
   "deliveries": "我的包裹",
+  "copied": "複製的",
   "edit_profile": {
     "my_personal_info": "我的个人信息",
     "personal_info": "个人信息",
