feat: implement marketplaces

--- a/src/app/i18n/locales/ru/admin.json
+++ b/src/app/i18n/locales/ru/admin.json
@@ -6,5 +6,6 @@
     "approving": "Одобрение получателя...",
     "approved": "Получатель одобрен",
     "error_approving": "Ошибка одобрения получателя"
-  }
+  },
+  "marketplaces": "Маркетплейсы"
 }
