--- a/src/app/i18n/locales/ru/navigation.json
+++ b/src/app/i18n/locales/ru/navigation.json
@@ -1,5 +1,6 @@
 {
   "about_us": "О нас",
   "how_it_works": "Как это работает?",
-  "calculator": "Калькулятор"
+  "calculator": "Калькулятор",
+  "marketplaces": "Маркетплейсы"
 }
