--- a/src/app/i18n/locales/en/navigation.json
+++ b/src/app/i18n/locales/en/navigation.json
@@ -1,5 +1,6 @@
 {
   "about_us": "About us",
   "how_it_works": "How it works?",
-  "calculator": "Calculator"
+  "calculator": "Calculator",
+  "marketplaces": "Marketplaces"
 }
