--- a/src/app/i18n/locales/kz/admin.json
+++ b/src/app/i18n/locales/kz/admin.json
@@ -6,5 +6,7 @@
     "approving": "Алушыны мақұлдау...",
     "approved": "Алушы сәтті мақұлданды",
     "error_approving": "Алушыны мақұлдау қатесі"
-  }
+  },
+  "marketplaces": "Маркетплейстар"
+
 }
