--- a/src/app/i18n/locales/kz/navigation.json
+++ b/src/app/i18n/locales/kz/navigation.json
@@ -1,5 +1,6 @@
 {
   "about_us": "Біз туралы",
   "how_it_works": "Ол қалай жұмыс істейді?",
-  "calculator": "Калькулятор"
+  "calculator": "Калькулятор",
+  "marketplaces": "Маркетплейстар"
 }
