--- a/src/app/i18n/locales/ru/profile.json
+++ b/src/app/i18n/locales/ru/profile.json
@@ -31,6 +31,10 @@
     "error_saving_profile": "Ошибка сохранения личных данных",
     "saving_recipient": "Сохранение данных получателя...",
     "saved_recipient": "Данные получателя сохранены",
-    "error_saving_recipient": "Ошибка сохранения данных получателя"
+    "error_saving_recipient": "Ошибка сохранения данных получателя",
+    "add_recipient": "Добавить нового получателя",
+    "add": "Сохранить нового получателя",
+    "edit": "Редактировать"
+
   }
 }
