--- a/src/app/i18n/locales/kz/profile.json
+++ b/src/app/i18n/locales/kz/profile.json
@@ -31,6 +31,11 @@
     "error_saving_profile": "Профиль деректерін сақтау қатесі",
     "saving_recipient": "Алушы деректерін сақтау...",
     "saved_recipient": "Сақталған алушы деректері",
-    "error_saving_recipient": "Алушы деректерін сақтау қатесі"
+    "error_saving_recipient": "Алушы деректерін сақтау қатесі",
+    "add_recipient": "Жаңа алушы қосу",
+    "add": "Жаңа алушы сақтау",
+    "edit": "Өзгерту"
+
+
   }
 }
