--- a/src/app/i18n/locales/zh/delivery.json
+++ b/src/app/i18n/locales/zh/delivery.json
@@ -14,5 +14,8 @@
   "in_mail_office": "在邮局",
   "delivered": "已交付",
   "deleted": "已删除",
-  "track_delivery": "跟踪交付"
+  "track_delivery": "跟踪交付",
+  "goods_details": "商品",
+  "close": "關閉",
+  "view_more": "連結到好的東西"
 }
