feat: qazpost tracking

--- a/src/app/i18n/locales/en/delivery.json
+++ b/src/app/i18n/locales/en/delivery.json
@@ -17,5 +17,114 @@
   "track_delivery": "Track delivery",
   "goods_details": "Goods",
   "close": "Close",
-  "view_more": "Link to the good"
+  "view_more": "Link to the good",
+  "order_history": "Order history",
+  "Sended_from_FLS": "Sent from FLS",
+  "ArrivedCorpDep": "Arrived at Corporate Department",
+  "DeliveredPVZ": "Delivered to Pickup Point",
+  "HandedPVZ": "Handed over at Pickup Point",
+  "ReturnedPVZ": "Returned from Pickup Point",
+  "DeliveredSVX": "Stored under Customs Supervision",
+  "Registered": "Postal Item Registered",
+  "Departed": "Departed from Sorting Center",
+  "Transit": "Arrived at Sorting Center",
+  "Arrived": "Arrived at Sorting Center",
+  "AtCustom": "Handed over to Customs for Inspection",
+  "FromCustom": "Released from Customs",
+  "Redirected": "Redirected",
+  "ReturnedToCompany": "Postal Item Returned",
+  "Postcripted": "Arrived at Sorting Center",
+  "AbonementBox": "Arrived at Delivery Location",
+  "BAT": "Postal Item Registered",
+  "RCPOPS": "Postal Item Registered",
+  "DLV": "Handed over to Postman/Courier for Delivery",
+  "DPAY": "Delivered",
+  "NONDLV": "Delivery Failed by Postman/Courier",
+  "ISSPAY": "Delivered",
+  "ISSSC": "Delivered",
+  "STRSC": "Awaiting Recipient at Pickup Point",
+  "Forwarded": "Redirected",
+  "Delivered": "Awaiting Recipient at Pickup Point",
+  "Handed": "Delivered",
+  "RET": "Postal Item Returned",
+  "RETSTR": "Postal Item Returned",
+  "SM_STR": "Awaiting Recipient at Pickup Point",
+  "PAY_COD": "Cash on Delivery Payment",
+  "CUSTOM_RET": "Returned from Customs",
+  "STR": "Accepted for Storage",
+  "RETSCSTR": "Postal Item Returned",
+  "RDR": "Redirected",
+  "RDRSTR": "Redirected",
+  "RDRSC": "Redirected",
+  "RDRSCSTR": "Redirected",
+  "BOXISS": "Delivered",
+  "DLV_POBOX": "Deposited in PO Box",
+  "SNDZONE_T": "Released by Customs",
+  "SNDDELAY": "Released from Customs (was under Customs supervision)",
+  "RPODELAY": "RPO under Customs Supervision",
+  "CORRECT": "Delivered",
+  "PRC": "Arrived at Sorting Center",
+  "SND": "Departed from Sorting Center",
+  "TRANSITRCV": "Arrived at Sorting Center",
+  "TRANSITSND": "Departed from Sorting Center",
+  "RETCC": "Postal Item Returned",
+  "RETSC": "Postal Item Returned",
+  "RCP_I": "Postal Item Accepted for Sending",
+  "RCP_O": "Postal Item Accepted for Sending",
+  "RCPOPS_I": "Postal Item Accepted for Sending",
+  "RCPOPS_O": "Postal Item Accepted for Sending",
+  "BOXISS_I": "delivered",
+  "BOXISS_O": "delivered",
+  "DLV_I": "Handed over to Postman/Courier for Delivery",
+  "DLV_O": "Handed over to Postman/Courier for Delivery",
+  "DLV_POBOX_I": "delivered",
+  "DLV_POBOX_O": "delivered",
+  "DPAY_I": "delivered",
+  "DPAY_O": "delivered",
+  "ISSPAY_I": "delivered",
+  "ISSPAY_O": "delivered",
+  "ISSSC_I": "delivered",
+  "ISSSC_O": "delivered",
+  "STR_EMS": "Accepted at Pickup Point",
+  "RET_I": "Postal Item Returned",
+  "RET_O": "Postal Item Returned",
+  "RETSTR_I": "Postal Item Returned",
+  "RETSTR_O": "Postal Item Returned",
+  "RETSC_I": "Postal Item Returned",
+  "RETSC_O": "Postal Item Returned",
+  "RETSCSTR_I": "Awaiting Recipient at Pickup Point",
+  "RETSCSTR_O": "Awaiting Recipient at Pickup Point",
+  "RDR_I": "Redirected",
+  "RDR_O": "Redirected",
+  "RDRSTR_I": "Redirected",
+  "RDRSTR_O": "Redirected",
+  "RDRSC_I": "Redirected",
+  "RDRSC_O": "Redirected",
+  "EMA": "Postal Item Accepted for Sending",
+  "EMB": "Arrived at Sorting Center",
+  "EMC": "Sent from Outgoing Exchange Facility",
+  "EMD": "Arrived at Sorting Center",
+  "EME": "Held at Customs",
+  "EMF": "Sent from Incoming Exchange Facility",
+  "EMG": "Arrived at Pickup Point",
+  "EMH": "Delivery Failed by Postman/Courier",
+  "EMI": "Successfully Delivered to Recipient",
+  "EMJ": "Arrived at Sorting Center",
+  "EMK": "Departed from Sorting Center",
+  "EXA": "Presented to Export Customs/Security",
+  "EXB": "Held at Export Customs/Security",
+  "EXC": "Returned from Export Customs/Security",
+  "EXD": "At External Exchange Facility",
+  "EXX": "Export of Postal Item Cancelled",
+  "EXС": "Cleared Customs",
+  "EDA": "At Incoming Exchange Facility",
+  "EDB": "Presented to Import Customs",
+  "EDC": "Returned from Customs",
+  "EDD": "Arrived at Sorting Center",
+  "EDE": "Departed from Sorting Center",
+  "EDF": "Awaiting Recipient at Pickup Point",
+  "EDG": "Handed over to Postman/Courier for Delivery",
+  "EDH": "Arrived at Pickup Point",
+  "EDX": "Import Cancelled",
+  "DLV_HAND": "Delivered by Courier"
 }
