--- a/src/app/i18n/locales/kz/delivery.json
+++ b/src/app/i18n/locales/kz/delivery.json
@@ -18,5 +18,114 @@
   "goods_details": "Тауарлар",
   "close": "Жабу",
   "open": "Тауарларды көру",
-  "view_more": "Өту"
+  "view_more": "Өту",
+  "order_history": "Тапсырыс тарихы",
+  "Sended_from_FLS": "FLS-тен жіберілді",
+  "ArrivedCorpDep": "Корпоративтік бөлімге келіп түсті",
+  "DeliveredPVZ": "Тапсырыс беру пунктіне жеткізілді",
+  "HandedPVZ": "Тапсырыс беру пунктінде табысталды",
+  "ReturnedPVZ": "Тапсырыс беру пунктінен қайтарылды",
+  "DeliveredSVX": "Кеден бақылауында сақтауға алынды",
+  "Registered": "Пошталық жөнелтілім тіркелді",
+  "Departed": "Сортау орталығынан жіберілді",
+  "Transit": "Сортау орталығына келді",
+  "Arrived": "Сортау орталығына келді",
+  "AtCustom": "Кедендік тексеруге берілді",
+  "FromCustom": "Кеденнен босатылды",
+  "Redirected": "Қайта бағытталды",
+  "ReturnedToCompany": "Пошталық жөнелтілім қайтарылды",
+  "Postcripted": "Сортау орталығына келді",
+  "AbonementBox": "Тапсырыс алу орнына келді",
+  "BAT": "Пошталық жөнелтілім тіркелді",
+  "RCPOPS": "Пошталық жөнелтілім тіркелді",
+  "DLV": "Пошташы/курьерге жеткізу үшін берілді",
+  "DPAY": "Табысталды",
+  "NONDLV": "Пошташы/курьер тарапынан жеткізілмеді",
+  "ISSPAY": "Табысталды",
+  "ISSSC": "Табысталды",
+  "STRSC": "Тапсырыс алу пунктінде алушыны күтуде",
+  "Forwarded": "Қайта бағытталды",
+  "Delivered": "Тапсырыс алу пунктінде алушыны күтуде",
+  "Handed": "Табысталды",
+  "RET": "Пошталық жөнелтілім қайтарылды",
+  "RETSTR": "Пошталық жөнелтілім қайтарылды",
+  "SM_STR": "Тапсырыс алу пунктінде алушыны күтуде",
+  "PAY_COD": "Жеткізу кезінде төлем",
+  "CUSTOM_RET": "Кеденнен қайтарылды",
+  "STR": "Сақтауға қабылданды",
+  "RETSCSTR": "Пошталық жөнелтілім қайтарылды",
+  "RDR": "Қайта бағытталды",
+  "RDRSTR": "Қайта бағытталды",
+  "RDRSC": "Қайта бағытталды",
+  "RDRSCSTR": "Қайта бағытталды",
+  "BOXISS": "Табысталды",
+  "DLV_POBOX": "Абоненттік жәшікке салынды",
+  "SNDZONE_T": "Кеденнен босатылды",
+  "SNDDELAY": "Кеденнен босатылды (кеден бақылауында болған)",
+  "RPODELAY": "РПО кеден бақылауында",
+  "CORRECT": "Табысталды",
+  "PRC": "Сортау орталығына келді",
+  "SND": "Сортау орталығынан жіберілді",
+  "TRANSITRCV": "Сортау орталығына келді",
+  "TRANSITSND": "Сортау орталығынан жіберілді",
+  "RETCC": "Пошталық жөнелтілім қайтарылды",
+  "RETSC": "Пошталық жөнелтілім қайтарылды",
+  "RCP_I": "Пошталық жөнелтілім жіберуге қабылданды",
+  "RCP_O": "Пошталық жөнелтілім жіберуге қабылданды",
+  "RCPOPS_I": "Пошталық жөнелтілім жіберуге қабылданды",
+  "RCPOPS_O": "Пошталық жөнелтілім жіберуге қабылданды",
+  "BOXISS_I": "табысталды",
+  "BOXISS_O": "табысталды",
+  "DLV_I": "Пошташы/курьерге жеткізу үшін берілді",
+  "DLV_O": "Пошташы/курьерге жеткізу үшін берілді",
+  "DLV_POBOX_I": "табысталды",
+  "DLV_POBOX_O": "табысталды",
+  "DPAY_I": "табысталды",
+  "DPAY_O": "табысталды",
+  "ISSPAY_I": "табысталды",
+  "ISSPAY_O": "табысталды",
+  "ISSSC_I": "табысталды",
+  "ISSSC_O": "табысталды",
+  "STR_EMS": "Тапсырыс алу пунктінде қабылданды",
+  "RET_I": "Пошталық жөнелтілім қайтарылды",
+  "RET_O": "Пошталық жөнелтілім қайтарылды",
+  "RETSTR_I": "Пошталық жөнелтілім қайтарылды",
+  "RETSTR_O": "Пошталық жөнелтілім қайтарылды",
+  "RETSC_I": "Пошталық жөнелтілім қайтарылды",
+  "RETSC_O": "Пошталық жөнелтілім қайтарылды",
+  "RETSCSTR_I": "Тапсырыс алу пунктінде алушыны күтуде",
+  "RETSCSTR_O": "Тапсырыс алу пунктінде алушыны күтуде",
+  "RDR_I": "Қайта бағытталды",
+  "RDR_O": "Қайта бағытталды",
+  "RDRSTR_I": "Қайта бағытталды",
+  "RDRSTR_O": "Қайта бағытталды",
+  "RDRSC_I": "Қайта бағытталды",
+  "RDRSC_O": "Қайта бағытталды",
+  "EMA": "Пошталық жөнелтілім жіберуге қабылданды",
+  "EMB": "Сортау орталығына келді",
+  "EMC": "Шығарылатын алмасу мекемесінен жіберілді",
+  "EMD": "Сортау орталығына келді",
+  "EME": "Кеденде ұсталып қалды",
+  "EMF": "Кіріс алмасу мекемесінен жіберілді",
+  "EMG": "Тапсырыс алу пунктіне келді",
+  "EMH": "Пошташы/курьер тарапынан жеткізілмеді",
+  "EMI": "Алушыға сәтті табысталды",
+  "EMJ": "Сортау орталығына келді",
+  "EMK": "Сортау орталығынан жіберілді",
+  "EXA": "Экспорттық кеденге/қауіпсіздікке ұсынылды",
+  "EXB": "Экспорттық кеденде/қауіпсіздікте ұсталып қалды",
+  "EXC": "Экспорттық кеденнен/қауіпсіздіктен қайтарылды",
+  "EXD": "Сыртқы алмасу мекемесінде",
+  "EXX": "Пошталық жөнелтілімнің экспорты тоқтатылды",
+  "EXС": "Кедендік рәсімдеуден өтті",
+  "EDA": "Кіріс алмасу мекемесінде",
+  "EDB": "Импорттық кеденге ұсынылды",
+  "EDC": "Кеденнен қайтарылды",
+  "EDD": "Сортау орталығына келді",
+  "EDE": "Сортау орталығынан жіберілді",
+  "EDF": "Тапсырыс алу пунктінде алушыны күтуде",
+  "EDG": "Пошташы/курьерге жеткізу үшін берілді",
+  "EDH": "Тапсырыс алу пунктіне келді",
+  "EDX": "Импорт жойылды",
+  "DLV_HAND": "Курьермен жеткізілді"
 }
