--- a/src/app/i18n/locales/ru/delivery.json
+++ b/src/app/i18n/locales/ru/delivery.json
@@ -18,5 +18,116 @@
   "goods_details": "Список товаров",
   "close": "Закрыть",
   "open": "Посмотреть",
-  "view_more": "Перейти по ссылке"
+  "view_more": "Перейти по ссылке",
+  "order_history": "История заказа",
+  "Sended_from_FLS": "Передано в корпоративный участок",
+  "ArrivedCorpDep": "Прибыло в корпоративный участок",
+  "DeliveredPVZ": "Принято на хранение в пункте выдачи заказов",
+  "HandedPVZ": "Вручено в пункте выдачи заказов",
+  "ReturnedPVZ": "Возврат из пункта выдачи заказов",
+  "DeliveredSVX": "На хранении под наблюдением таможни",
+  "Registered": "Принято почтовое отправление",
+  "Departed": "Отправлено из центра сортировки",
+  "Transit": "Прибытие в центр сортировки",
+  "Arrived": "Прибытие в центр сортировки",
+  "AtCustom": "Передано на таможенный досмотр",
+  "FromCustom": "Выпущен с таможни",
+  "Redirected": "Перенаправлено",
+  "ReturnedToCompany": "Почтовое отправление возвращено",
+  "Postcripted": "Прибытие в центр сортировки",
+  "AbonementBox": "Поступило в место выдачи",
+  "BAT": "Принято почтовое отправление",
+  "RCPOPS": "Принято почтовое отправление",
+  "DLV": "Передано почтальону/курьеру на доставку",
+  "DPAY": "Вручено",
+  "NONDLV": "Доставка почтальоном/курьером не состоялась",
+  "ISSPAY": "Вручено",
+  "ISSSC": "Вручено",
+  "STRSC": "Ожидает получателя в пункте выдачи",
+  "Forwarded": "Перенаправлено",
+  "Delivered": "Ожидает получателя в пункте выдачи",
+  "Handed": "Вручено",
+  "RET": "Почтовое отправление возвращено",
+  "RETSTR": "Почтовое отправление возвращено",
+  "SM_STR": "Ожидает получателя в пункте выдачи",
+  "PAY_COD": "оплата наложенного платежа",
+  "CUSTOM_RET": "Возвращено с таможни",
+  "STR": "Принятие на хранение",
+  "RETSCSTR": "Почтовое отправление возвращено",
+  "RDR": "Перенаправлено",
+  "RDRSTR": "Перенаправлено",
+  "RDRSC": "Перенаправлено",
+  "RDRSCSTR": "Перенаправлено",
+  "BOXISS": "Вручено",
+  "DLV_POBOX": "Вложено в абонентский ящик",
+  "SNDZONE_T": "Выпущено таможней",
+  "SNDDELAY": "Выпущен с таможни (был под наблюдением таможни)",
+  "RPODELAY": "РПО под наблюдением таможни",
+  "CORRECT": "Вручено",
+  "PRC": "Прибыло в центр сортировки",
+  "SND": "Отправлено из центра сортировки",
+  "TRANSITRCV": "Прибыло в центр сортировки",
+  "TRANSITSND": "Отправлено из центра сортировки",
+  "RETCC": "Почтовое отправление возвращено",
+  "RETSC": "Почтовое отправление возвращено",
+  "RCP_I": "Принято почтовое отправление для отправки",
+  "RCP_O": "Принято почтовое отправление для отправки",
+  "RCPOPS_I": "Принято почтовое отправление для отправки",
+  "RCPOPS_O": "Принято почтовое отправление для отправки",
+  "BOXISS_I": "вручено ",
+  "BOXISS_O": "вручено ",
+  "DLV_I": "Передано почтальону/курьеру на доставку",
+  "DLV_O": "Передано почтальону/курьеру на доставку",
+  "DLV_POBOX_I": "вручено ",
+  "DLV_POBOX_O": "вручено ",
+  "DPAY_I": "вручено ",
+  "DPAY_O": "вручено ",
+  "ISSPAY_I": "вручено ",
+  "ISSPAY_O": "вручено ",
+  "ISSSC_I": "вручено ",
+  "ISSSC_O": "вручено ",
+  "STR_EMS": "Принято в пункте выдачи",
+  "RET_I": "Почтовое отправление возвращено",
+  "RET_O": "Почтовое отправление возвращено",
+  "RETSTR_I": "Почтовое отправление возвращено",
+  "RETSTR_O": "Почтовое отправление возвращено",
+  "RETSC_I": "Почтовое отправление возвращено",
+  "RETSC_O": "Почтовое отправление возвращено",
+  "RETSCSTR_I": "Ожидает получателя в пункте выдачи",
+  "RETSCSTR_O": "Ожидает получателя в пункте выдачи",
+  "RDR_I": "Перенаправлено",
+  "RDR_O": "Перенаправлено",
+  "RDRSTR_I": "Перенаправлено",
+  "RDRSTR_O": "Перенаправлено",
+  "RDRSC_I": "Перенаправлено",
+  "RDRSC_O": "Перенаправлено",
+  "EMA": "Принято почтовое отправление для отправки",
+  "EMB": "Прибыло в центр сортировки",
+  "EMC": "Отправлено из исходящего учреждения обмена",
+  "EMD": "Прибыло в центр сортировки",
+  "EME": "Задержано на таможне",
+  "EMF": "Отправлено из входящего учреждения обмена",
+  "EMG": "Прибыло в пункт выдачи",
+  "EMH": "Доставка почтальоном/курьером не состоялась",
+  "EMI": "Успешно вручено адресату",
+  "EMJ": "Прибыло в центр сортировки",
+  "EMK": "Отправлено из центра сортировки",
+  "EXA": "Представлено экспортной таможне/безопасности",
+  "EXB": "Задержано в экспортной таможне/безопасности",
+  "EXC": "Возвращено из экспортной таможни/безопасности",
+  "EXD": "Находится на внешнем учреждении обмена",
+  "EXX": "Экспорт почтового отправления отменен",
+  "EXС": "Прошло таможенное оформление",
+  "EDA": "Находится на входящем учреждении обмена",
+  "EDB": "Предъявлено импортной таможне",
+  "EDC": "Возвращено с таможни",
+  "EDD": "Прибыло в центр сортировки",
+  "EDE": "Отправлено из центра сортировки",
+  "EDF": "Ожидает адресата в пункте выдачи",
+  "EDG": "Передано почтальону/курьеру на доставку",
+  "EDH": "Прибыло в пункт выдачи",
+  "EDX": "Импорт отменен",
+  "DLV_HAND": "Доставлено курьером"
+
+
 }
