--- a/src/app/i18n/locales/zh/delivery.json
+++ b/src/app/i18n/locales/zh/delivery.json
@@ -17,5 +17,115 @@
   "track_delivery": "跟踪交付",
   "goods_details": "商品",
   "close": "關閉",
-  "view_more": "連結到好的東西"
+  "view_more": "連結到好的東西",
+  "order_history": "訂單歷史",
+    "Sended_from_FLS": "来自FLS",
+    "ArrivedCorpDep": "到达公司部门",
+    "DeliveredPVZ": "送达取件点",
+    "HandedPVZ": "在取件点交接",
+    "ReturnedPVZ": "从取件点退回",
+    "DeliveredSVX": "海关监管下储存",
+    "Registered": "邮政物品已登记",
+    "Departed": "离开分拣中心",
+    "Transit": "到达分拣中心",
+    "Arrived": "到达分拣中心",
+    "AtCustom": "移交给海关检查",
+    "FromCustom": "海关放行",
+    "Redirected": "重定向",
+    "ReturnedToCompany": "邮政物品退回",
+    "Postcripted": "到达分拣中心",
+    "AbonementBox": "到达投递地点",
+    "BAT": "邮政物品已登记",
+    "RCPOPS": "邮政物品已登记",
+    "DLV": "移交给邮递员/快递员送递",
+    "DPAY": "已送达",
+    "NONDLV": "邮递员/快递员送递失败",
+    "ISSPAY": "已送达",
+    "ISSSC": "已送达",
+    "STRSC": "等待收件人在取件点领取",
+    "Forwarded": "重定向",
+    "Delivered": "等待收件人在取件点领取",
+    "Handed": "已送达",
+    "RET": "邮政物品退回",
+    "RETSTR": "邮政物品退回",
+    "SM_STR": "等待收件人在取件点领取",
+    "PAY_COD": "货到付款",
+    "CUSTOM_RET": "从海关退回",
+    "STR": "接受存储",
+    "RETSCSTR": "邮政物品退回",
+    "RDR": "重定向",
+    "RDRSTR": "重定向",
+    "RDRSC": "重定向",
+    "RDRSCSTR": "重定向",
+    "BOXISS": "已送达",
+    "DLV_POBOX": "存入邮政信箱",
+    "SNDZONE_T": "海关放行",
+    "SNDDELAY": "海关放行（曾处于海关监管下）",
+    "RPODELAY": "RPO处于海关监管下",
+    "CORRECT": "已送达",
+    "PRC": "到达分拣中心",
+    "SND": "离开分拣中心",
+    "TRANSITRCV": "到达分拣中心",
+    "TRANSITSND": "离开分拣中心",
+    "RETCC": "邮政物品退回",
+    "RETSC": "邮政物品退回",
+    "RCP_I": "邮政物品接受发送",
+    "RCP_O": "邮政物品接受发送",
+    "RCPOPS_I": "邮政物品接受发送",
+    "RCPOPS_O": "邮政物品接受发送",
+    "BOXISS_I": "已送达",
+    "BOXISS_O": "已送达",
+    "DLV_I": "移交给邮递员/快递员送递",
+    "DLV_O": "移交给邮递员/快递员送递",
+    "DLV_POBOX_I": "已送达",
+    "DLV_POBOX_O": "已送达",
+    "DPAY_I": "已送达",
+    "DPAY_O": "已送达",
+    "ISSPAY_I": "已送达",
+    "ISSPAY_O": "已送达",
+    "ISSSC_I": "已送达",
+    "ISSSC_O": "已送达",
+    "STR_EMS": "在取件点接受",
+    "RET_I": "邮政物品退回",
+    "RET_O": "邮政物品退回",
+    "RETSTR_I": "邮政物品退回",
+    "RETSTR_O": "邮政物品退回",
+    "RETSC_I": "邮政物品退回",
+    "RETSC_O": "邮政物品退回",
+    "RETSCSTR_I": "等待收件人在取件点领取",
+    "RETSCSTR_O": "等待收件人在取件点领取",
+    "RDR_I": "重定向",
+    "RDR_O": "重定向",
+    "RDRSTR_I": "重定向",
+    "RDRSTR_O": "重定向",
+    "RDRSC_I": "重定向",
+    "RDRSC_O": "重定向",
+    "EMA": "邮政物品接受发送",
+    "EMB": "到达分拣中心",
+    "EMC": "从发出交换机构发送",
+    "EMD": "到达分拣中心",
+    "EME": "在海关滞留",
+    "EMF": "从收件交换机构发送",
+    "EMG": "到达取件点",
+    "EMH": "邮递员/快递员送递失败",
+    "EMI": "成功送达收件人",
+    "EMJ": "到达分拣中心",
+    "EMK": "离开分拣中心",
+    "EXA": "提交给出口海关/安检",
+    "EXB": "在出口海关/安检滞留",
+    "EXC": "从出口海关/安检退回",
+    "EXD": "在外部交换机构",
+    "EXX": "邮政物品出口取消",
+    "EXС": "通过海关清关",
+    "EDA": "在收件交换机构",
+    "EDB": "提交给进口海关",
+    "EDC": "从海关退回",
+    "EDD": "到达分拣中心",
+    "EDE": "离开分拣中心",
+    "EDF": "等待收件人在取件点领取",
+    "EDG": "移交给邮递员/快递员送递",
+    "EDH": "到达取件点",
+    "EDX": "进口取消",
+    "DLV_HAND": "由快递员送达"
+    
 }
