--- a/src/app/i18n/locales/zh/marketplace.json
+++ b/src/app/i18n/locales/zh/marketplace.json
@@ -7,5 +7,7 @@
     "country": "国家",
     "Description": "描述",
     "websiteLink": "网站链接",
-    "photoLink": "照片链接"
+    "photoLink": "照片链接",
+    "visit_website": "访问",
+    "marketplace": "市场"
     }
