--- a/src/app/i18n/locales/ru/marketplace.json
+++ b/src/app/i18n/locales/ru/marketplace.json
@@ -7,5 +7,8 @@
     "country": "Страна",
     "description": "Описание",
     "websiteLink": "Ссылка на сайт",
-    "photoLink": "Ссылка на фото"
+    "photoLink": "Ссылка на фото",
+    "visit_website": "Перейти",
+    "marketplace": "Маркетплейсы"
+
 }
