refactor: add whatsapp link & remove turkey from the title

--- a/src/app/i18n/locales/en/description.json
+++ b/src/app/i18n/locales/en/description.json
@@ -1,4 +1,4 @@
 {
-  "title": "Delivery of parcels from Turkey, South Korea and Europe",
+  "title": "Delivery of parcels from South Korea and Europe",
   "information": "We make online shopping accessible!"
 }
