--- a/src/app/i18n/locales/ru/description.json
+++ b/src/app/i18n/locales/ru/description.json
@@ -1,4 +1,4 @@
 {
-  "title": "Доставка посылок из Турции, Южной Кореи и Европы",
+  "title": "Доставка посылок из Южной Кореи и Европы",
   "information": "Делаем онлайн-шоппинг доступным!"
 }
